# cacc_robot

./: README.md
cacc_description/: CMakeLists.txt  package.xml
cacc_description/config/: ekf.yaml  ekf_global.yaml  ekf_local.yaml  nav2_params.yaml  navsat_transform.yaml  slam_online_async.yaml
cacc_description/launch/: ekf_launch.py  localization.launch.py  navigation.launch.py  navsat_launch.py  outdoor_robot.launch.py  sensor_launch.py  slam.launch.py  tf_pub.launch.py  view_robot.launch.py
cacc_description/rviz/: robot_view.rviz
cacc_description/sripts/: fake_odom_publisher.py
cacc_description/urdf/: robot.urdf.xacro  test.xacro
caccbot_gps/: package.xml  setup.cfg  setup.py
caccbot_gps/caccbot_gps/: skg13bl_gps_node.py
control_motor/: package.xml  setup.py
control_motor/Arduino_nano/motor_control_with_steering/: motor_control_with_steering.ino
control_motor/control_motor/: motor_control.py
imu_mpu6050/: package.xml  setup.py
imu_mpu6050/imu_mpu6050/: imu_node.py
robot_description/: package.xml  setup.py
robot_description/launch/: view_robot.launch.py
robot_description/rviz/: robot_view.rviz
robot_description/urdf/: robot.urdf.xacro  robot_core.xacro  test.xacro
