<?xml version="1.0"?>
<package format="3">
  <name>imu_mpu6050</name>
  <version>0.0.1</version>
  <description>ROS 2 Humble node to publish IMU data from MPU6050 on Raspberry Pi</description>
  <maintainer email="pi@todo.todo">Ciril</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- TF support if needed -->
  <exec_depend>tf_transformations</exec_depend>

  <!-- For using setuptools -->
  <exec_depend>python3-setuptools</exec_depend>

  <!-- Optional: Make sure pip package is available -->
  <exec_depend>python3-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>